--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.1.6",
+    "next": "^12.1.6",
     "next-connect": "^0.12.2",
     "next-sanity-image": "^3.2.1",
     "next-sitemap": "^3.1.17",
@@ -48,6 +48,8 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/next": "^9.0.0",
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
